[gd_scene load_steps=4 format=3 uid="uid://dcwuvyawrpc01"]

[ext_resource type="Script" uid="uid://dqpl324211lxs" path="res://assets/ui/win_dialog.gd" id="1_prba7"]

[sub_resource type="Theme" id="Theme_prba7"]
default_font_size = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_prba7"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_prba7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_prba7")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
self_modulate = Color(1, 1, 1, 0.0941176)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_prba7")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -141.5
offset_right = 164.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Победа!"
horizontal_alignment = 1

[node name="ButtonNext" type="Button" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Продолжить
"

[node name="ButtonMenu" type="Button" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Меню
"

[connection signal="pressed" from="Control/MarginContainer/Panel/VBoxContainer/ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/VBoxContainer/ButtonMenu" to="." method="_on_button_menu_pressed"]
